# surfgram-cli

./: CONTRIBUTING.md  README.md  pyproject.toml
surfgram_cli/: __init__.py  __main__.py  cli.py
surfgram_cli/config/: __init__.py
surfgram_cli/enums/: __init__.py
surfgram_cli/error_handler/: __init__.py
surfgram_cli/manager/: __init__.py
surfgram_cli/templates/bot_structure/: .env.j2  __init__.py.j2
surfgram_cli/templates/bot_structure/commands/: start_cmd.py.j2
surfgram_cli/templates/bot_structure/configs/: config.py.j2
surfgram_cli/ui_components/: __init__.py  banner.py  console.py
surfgram_cli/utils/: __init__.py  debug.py  reloader.py
tests/: test_cli.py
